fixed linebreaks in share url box

--- a/Code/templates/css/custom.css
+++ b/Code/templates/css/custom.css
@@ -462,6 +462,8 @@ h2 {
 	color: #fffff0;
 	border-radius: 3px;
 	padding: 15px 0px;
+	overflow-wrap: break-word;
+  	word-wrap: break-word;
 }
 
 .shareUrlBox a {
